Sección responsive Contacto

--- a/Secciones/contacto.html
+++ b/Secciones/contacto.html
@@ -91,13 +91,13 @@
                         <div class="col mb-3">
                             <ul class="nav flex-column">
                                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">
-                                        <i class="bi bi-facebook m-1"></i> Facebook
+                                        <i class="bi bi-facebook m-1"></i> Av. Lacarra 3280 - Caba
                                     </a></li>
                                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">
-                                        <i class="bi bi-instagram m-1"></i> Instagram
+                                        <i class="bi bi-instagram m-1"></i> +54 11 5588 6677
                                     </a></li>
                                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">
-                                        <i class="bi bi-youtube m-1"></i> Youtube
+                                        <i class="bi bi-youtube m-1"></i> info@ilovebunny.com
                                     </a></li>
             
                             </ul>
