--- a/Secciones/contacto.html
+++ b/Secciones/contacto.html
@@ -21,11 +21,11 @@
     <header>
         <div class="container-fluid">
             <div class="px- py-3 my-5 text-center">
-                <div class="px-4 p-md-5 mb-4 rounded text-bg-dark">
+               
                     <div class="col-md-12">
                         <div class="fade-in-fwd">
                             <h1 class="display-4 fw-bold">Contacto</h1>
-                            <img src="../Imagenes/veterinario.png" height="100" alt="" class="my-4
+                            <img src="../Imagenes/rastreador.png" height="100" alt="" class="my-4
                         ">
                         </div>
                     </div>
@@ -85,11 +85,14 @@
     <main>
         <form>
 
-            <div class="row g-5 align-items-center  py-5 my-5 container-fluid">
+            <div class="row g-5 align-items-center py-5 my-5 container-fluid">
                 <div class="col-md-4 col-lg-4 ">
-
-                    <div class="col mb-2">
-                        <ul class="nav flex-column">
+                <div class="d-grid justify-content-center">
+<div class="mb-4">
+                    <h3>Datos de contacto y ubicación</h3>
+                </div>
+                    <div class="col mb-4">
+                        <ul class="nav flex-column fs-5">
                             <li class="nav-item mb-4"><a href="#" class="nav-link p-0 text-muted">
                                     <i class="bi bi-geo-alt"></i> Av. Lacarra 3280 - Caba
                                 </a></li>
@@ -104,8 +107,9 @@
                         </ul>
                     </div>
                 </div>
+                </div>
 
-                <div class="col-md-7 col-lg-8">
+                <div class="col-md-8 col-lg-8">
                     <form class="needs-validation" novalidate="">
                         <div class="row g-3">
 
@@ -146,7 +150,7 @@
                             </div>
 
 
-                            <div class="col-md-6">
+                            <div class="col-sm-6">
                             <div class="form-floating">
                                 <select class="form-select" id="floatingSelect" aria-label="Floating label select example" required="">
                                   <option disabled="disabled">Seleccionar...</option>
@@ -166,7 +170,7 @@
                                     style="height: 100px"></textarea>
                                 <label for="floatingTextarea2">Mensaje</label>
                             </div>
-                            <div class="d-grid gap-2 col-6 mx-auto py-3">
+                            <div class="d-grid col-6 mx-auto py-3">
                                 <button type="submit" class="btn btn-outline-primary">Enviar</button>
             
                         </div>
