--- a/Secciones/e-shop.html
+++ b/Secciones/e-shop.html
@@ -25,7 +25,7 @@
                     <div class="col-md-12">
                         <div class="fade-in-fwd">
                         <h1 class="display-4 fw-bold">E-Shop</h1>
-                        <img src="../Imagenes/veterinario.png"  height="100" alt="" class="my-4
+                        <img src="../Imagenes/perro.png"  height="100" alt="" class="my-4
                         ">
                     </div>
                 </div>
