--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!--FIN ENCABEZADO-->
 
 <!--INCIO DE BARRA DE NAVEGACIÓN-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a href="./index.html" class="navbar-brand">I Love Bunny</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -76,7 +76,7 @@
     <div data-aos="zoom-in">
         <div class="container">
             <div class="px- py-3 my-5 text-center border-top border-bottom">
-                <h2 class="display-4 fw-bold">Destacados</h2>
+                <h2 class="display-4 fw-bold ">Destacados</h2>
             </div>
         </div>
     </div>
@@ -138,7 +138,7 @@
 
 <!--INICIO PIE DE PAGINA-->
     <div class="container-fluid">
-        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-5 py-3 my- border-top bg-dark text-bg-light text-white">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-5 py-3 my- border-top ">
             <div class="col mb-5 d-flex align-items-center mb-3 link-dark text-decoration-none">
                 <a href="./index.html"><img src="./Imagenes/Como-Dibuja-Una-Cara-De-Conejo-Facil-Paso-a-Paso.jpg"
                         height="50" alt="LogoIloveBunny"></a>
@@ -202,6 +202,6 @@
             AOS.init();
         </script>
 </body>
-
+<!--text-bg-light bg-dark text-white-->
 
 </html>
