--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="col mb-5 d-flex align-items-center mb-3 link-dark text-decoration-none">
                 <a href="./index.html"><img src="./Imagenes/Como-Dibuja-Una-Cara-De-Conejo-Facil-Paso-a-Paso.jpg"
                         height="50" alt="LogoIloveBunny"></a>
-                <p class="text-muted mb-2 m-2">© 2022 - I Love Bunny - All Rights Reserved</p>
+                <p class="mb-2 m-2">© 2022 - I Love Bunny - All Rights Reserved</p>
             </div>
 
             <div class="col mb-3">
@@ -153,24 +153,24 @@
                 <h5>Links Rapidos</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="./Secciones/mascotas.html"
-                            class="nav-link p-0 text-muted">Mascotas</a></li>
+                            class="p-0">Mascotas</a></li>
                     <li class="nav-item mb-2"><a href="./Secciones/cuidados.html"
-                            class="nav-link p-0 text-muted">Cuidados</a></li>
+                            class="p-0">Cuidados</a></li>
                     <li class="nav-item mb-2"><a href="./Secciones/e-shop.html"
-                            class="nav-link p-0 text-muted">E-Shop</a></li>
+                            class="p-0">E-Shop</a></li>
                     <li class="nav-item mb-2"><a href="./Secciones/novedades.html"
-                            class="nav-link p-0 text-muted">Novedades</a></li>
+                            class="p-0">Novedades</a></li>
                     <li class="nav-item mb-2"><a href="./Secciones/contacto.html"
-                            class="nav-link p-0 text-muted">Contacto</a></li>
+                            class="p-0">Contacto</a></li>
                 </ul>
             </div>
 
             <div class="col mb-3">
                 <h5>Contactanos</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2" class="text muted"><a href="#" class="nav-link p-0 text-muted"> +54 11
+                    <li class="nav-item mb-2" class="text muted"><a href="#" class="p-0"> +54 11
                             5555-0000</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">info@ilovebunny.com</a>
+                    <li class="nav-item mb-2"><a href="#" class="p-0">info@ilovebunny.com</a>
                     </li>
 
                 </ul>
@@ -179,13 +179,13 @@
             <div class="col mb-3">
                 <h5>Seguinos en</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">
+                    <li class="nav-item mb-2"><a href="#" class="p-0">
                             <i class="bi bi-facebook m-1"></i> Facebook
                         </a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">
+                    <li class="nav-item mb-2"><a href="#" class="p-0">
                             <i class="bi bi-instagram m-1"></i> Instagram
                         </a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">
+                    <li class="nav-item mb-2"><a href="#" class="p-0">
                             <i class="bi bi-youtube m-1"></i> Youtube
                         </a></li>
                 </ul>
