--- a/Secciones/mascotas.html
+++ b/Secciones/mascotas.html
@@ -22,7 +22,7 @@
 
         <div class="container-fluid">
             <div class="px- py-3 my-5 text-center">
-                <div class="px-4 p-md-5 mb-4 rounded text-bg-dark">
+                <div class="px-4 p-md-5 mb-4 ">
                     <div class="col-md-12">
                         <div class="fade-in-fwd">
                         <h1 class="display-4 fw-bold">Mascotas</h1>
@@ -39,7 +39,7 @@
 <!--FIN ENCABEZADO-->
 
 <!--INCIO DE BARRA DE NAVEGACIÓN-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a href="../index.html" class="navbar-brand">I Love Bunny</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -200,62 +200,60 @@
 <!--FIN DE CONTENIDO PRINCIPAL-->
 
    <!--INICIO PIE DE PAGINA--> 
-<div class="container-fluid">
-        <footer
-            class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-5 py-3 my- border-top bg-dark text-bg-light text-white">
-            <div class="col mb-5 d-flex align-items-center mb-3 link-dark text-decoration-none">
-                <a href="../index.html"><img src="../Imagenes/Como-Dibuja-Una-Cara-De-Conejo-Facil-Paso-a-Paso.jpg"
-                        height="50" alt="LogoIloveBunny"></a>
-                <p class="text-muted mb-2 m-2">© 2022 - I Love Bunny - All Rights Reserved</p>
-            </div>
+   <div class="container-fluid">
+    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-5 py-3 my- border-top ">
+        <div class="col mb-5 d-flex align-items-center mb-3 link-dark text-decoration-none">
+            <a href="../index.html"><img src="../Imagenes/Como-Dibuja-Una-Cara-De-Conejo-Facil-Paso-a-Paso.jpg"
+                    height="50" alt="LogoIloveBunny"></a>
+            <p class="mb-2 m-2">© 2022 - I Love Bunny - All Rights Reserved</p>
+        </div>
 
-            <div class="col mb-3">
+        <div class="col mb-3">
 
-            </div>
+        </div>
 
-            <div class="col mb-3">
-                <h5>Links Rapidos</h5>
-                <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="../Secciones/mascotas.html"
-                            class="nav-link p-0 text-muted">Mascotas</a></li>
-                    <li class="nav-item mb-2"><a href="../Secciones/cuidados.html"
-                            class="nav-link p-0 text-muted">Cuidados</a></li>
-                    <li class="nav-item mb-2"><a href="../Secciones/e-shop.html"
-                            class="nav-link p-0 text-muted">E-Shop</a></li>
-                    <li class="nav-item mb-2"><a href="../Secciones/novedades.html"
-                            class="nav-link p-0 text-muted">Novedades</a></li>
-                    <li class="nav-item mb-2"><a href="../Secciones/contacto.html"
-                            class="nav-link p-0 text-muted">Contacto</a></li>
-                </ul>
-            </div>
+        <div class="col mb-3">
+            <h5>Links Rapidos</h5>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2"><a href="./Secciones/mascotas.html"
+                        class="p-0">Mascotas</a></li>
+                <li class="nav-item mb-2"><a href="./Secciones/cuidados.html"
+                        class="p-0">Cuidados</a></li>
+                <li class="nav-item mb-2"><a href="./Secciones/e-shop.html"
+                        class="p-0">E-Shop</a></li>
+                <li class="nav-item mb-2"><a href="./Secciones/novedades.html"
+                        class="p-0">Novedades</a></li>
+                <li class="nav-item mb-2"><a href="./Secciones/contacto.html"
+                        class="p-0">Contacto</a></li>
+            </ul>
+        </div>
 
-            <div class="col mb-3">
-                <h5>Contactanos</h5>
-                <ul class="nav flex-column">
-                    <li class="nav-item mb-2" class="text muted"><a href="#" class="nav-link p-0 text-muted"> +54 11
-                            5555-0000</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">info@ilovebunny.com</a>
-                    </li>
-                </ul>
-            </div>
+        <div class="col mb-3">
+            <h5>Contactanos</h5>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2" class="text muted"><a href="#" class="p-0"> +54 11
+                        5555-0000</a></li>
+                <li class="nav-item mb-2"><a href="#" class="p-0">info@ilovebunny.com</a>
+                </li>
 
-            <div class="col mb-3">
-                <h5>Seguinos en</h5>
-                <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">
-                            <i class="bi bi-facebook m-1"></i> Facebook
-                        </a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">
-                            <i class="bi bi-instagram m-1"></i> Instagram
-                        </a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">
-                            <i class="bi bi-youtube m-1"></i> Youtube
-                        </a></li>
+            </ul>
+        </div>
 
-                </ul>
-            </div>
-
-        </footer>
+        <div class="col mb-3">
+            <h5>Seguinos en</h5>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2"><a href="#" class="p-0">
+                        <i class="bi bi-facebook m-1"></i> Facebook
+                    </a></li>
+                <li class="nav-item mb-2"><a href="#" class="p-0">
+                        <i class="bi bi-instagram m-1"></i> Instagram
+                    </a></li>
+                <li class="nav-item mb-2"><a href="#" class="p-0">
+                        <i class="bi bi-youtube m-1"></i> Youtube
+                    </a></li>
+            </ul>
+        </div>
+    </footer>
 <!--FIN PIE DE PAGINA, FIN DE LA PAGINA-->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
