--- a/Secciones/contacto.html
+++ b/Secciones/contacto.html
@@ -92,14 +92,14 @@
                 </div>
                     <div class="col mb-4">
                         <ul class="nav flex-column fs-5">
-                            <li class="nav-item mb-4"><a href="#" class="nav-link p-0 text-muted">
+                            <li class="nav-item mb-4"><a href="#" class="p-0">
                                     <i class="bi bi-geo-alt"></i> Av. Lacarra 3280 - Caba
                                 </a></li>
                             <li class="nav-item mb-4"><a href="https://api.whatsapp.com/send?phone=549115555000"
-                                    class="nav-link p-0 text-muted">
+                                    class="p-0">
                                     <i class="bi bi-whatsapp"></i> +54 11 5555 0000
                                 </a></li>
-                            <li class="nav-item mb-4"><a href="#" class="nav-link p-0 text-muted">
+                            <li class="nav-item mb-4"><a href="#" class="p-0">
                                     <i class="bi bi-envelope"></i> info@ilovebunny.com
                                 </a></li>
 
